# lsabd-machine-learning-tutorials

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: GAHT_pregnancy_metadata_SDRF.tsv
notebooks/: 1-data-preprocessing.ipynb  2-dimensionality-reduction.ipynb  2_Dimensionality_reduction.ipynb  4-classification-and-regression.ipynb
notebooks/answers/: 1-data-preprocessing.ipynb  2-dimensionality-reduction.ipynb  2_Dimensionality_reduction_answers.html  2_Dimensionality_reduction_answers.ipynb  3-overfitting.ipynb  4-classification-and-regression.ipynb
