[project]
name = "lsabd-machine-learning-tutorials"
version = "0.1.0"
description = "Tutorials machine learning for the Large Scale Analysis of Biomedical Data course"
readme = "README.md"
requires-python = "==3.12.12"
dependencies = [
    "matplotlib==3.10.0",
    "mlxtend==0.23.4",
    "numpy==2.0.2",
    "pandas==2.2.2",
    "seaborn==0.13.2",
    "scikit-learn==1.6.1",
    "umap-learn==0.5.9.post2",
    "ipykernel==6.17.1",
    "ipywidgets==7.7.1",
]
